<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activity.WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="257dp"
            android:layout_height="190dp"
            android:src="@drawable/welcome"
            android:id="@+id/welcomeImg"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:layout_gravity="center"
            android:textSize="24dp"
            android:layout_marginTop="30dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/welcomedesc"
            android:layout_marginTop="13dp"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_100"
            android:textColor="@color/white_200"
            android:text="@string/next"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:textAllCaps="false"
            android:textSize="14dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="14dp"
            android:id="@+id/nextButton"/>

    </LinearLayout>

</RelativeLayout>