<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ParuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="40dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lungdisease"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:id="@+id/nameDisease"/>

        <TextView
            android:layout_marginTop="12dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/lungdisease"
            android:textSize="10sp"
            android:textAlignment="center"
            android:id="@+id/descDisease"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">


        <ImageView
            android:layout_width="260dp"
            android:layout_height="260dp"
            android:layout_gravity="center"
            android:background="@drawable/image_upload"
            android:id="@+id/imgPick"
            />

        <ProgressBar
            android:id="@+id/progressbar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="35dp"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/magenta_200"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginTop="14dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:id="@+id/fieldDetectResult"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lungdisease"
                android:textColor="@color/white_200"
                android:id="@+id/detectResult"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/percentDummy"
                android:textColor="@color/white_200"
                android:textAlignment="textEnd"
                android:id="@+id/percentResult"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_100"
            android:textColor="@color/white_200"
            android:text="@string/detect"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="14dp"
            android:id="@+id/detectButton"
            android:visibility="visible"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_700"
            android:textColor="@color/white_200"
            android:text="@string/reload"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="14dp"
            android:id="@+id/reloadButton"
            android:visibility="gone"/>

    </LinearLayout>

</RelativeLayout>